--- a/client/lab_4/style.css
+++ b/client/lab_4/style.css
@@ -8,7 +8,7 @@
 */
 
 html {
-  background-color: #fff;
+  background-color: #ffffff;
   font-size: 16px;
   min-width: 300px;
   overflow-x: hidden;
@@ -39,7 +39,7 @@ a {
   text-decoration: none;
 }
 
-h2 {
+h2, h3 {
   margin:0;
   padding:0;
   padding-bottom:1.5rem;
@@ -134,13 +134,16 @@ form {
   padding: 1.5rem;
 }
 
-.right_section {
+.right_section{
   background-color: rgba(255, 224, 138, 0.7);
   flex: 1 2 auto;
   margin: 1rem;
   align-items: center;
-  max-width: 450px;
+  justify-content: center;
+  display: flex;
+  flex-direction: column;
 }
+
 
 /*
   This block is actually dependent on the "container" block having a flex set on it
@@ -301,5 +304,15 @@ form label {
     /* check it out by using your developer tools to shrink your screen-size */
     .container {
       background-color: rgba(204, 8, 162, 0.65);
+      flex-direction: column;
+    }
+
+    .right_section{
+      align-items: baseline;
+      justify-content: flex-start;
+    }
+
+    .box{
+      width: -webkit-fill-available
     }
 }
