--- a/client/lab_4/style.css
+++ b/client/lab_4/style.css
@@ -30,7 +30,7 @@ body {
   font-family: ‘Segoe UI’, Candara, ‘Bitstream Vera Sans’, ‘DejaVu Sans’, ‘Bitsream Vera Sans’, ‘Trebuchet MS’, Verdana, ‘Verdana Ref’, sans-serif;
   font-weight: 400;
   line-height: 1.5;
-  background-color: rgb(239, 239, 239);
+  background-color: #83B5D1;
 }
 
 
@@ -40,13 +40,14 @@ a {
 }
 
 h2, h3 {
+  color: #7698B3;
   margin:0;
   padding:0;
   padding-bottom:1.5rem;
 }
 
 form {
-  accent-color: hsla(120, 100%, 50%, 0.482);
+  accent-color: #7698B3;
 }
 
 /*
@@ -92,8 +93,8 @@ form {
   /* this will push other blocks out of the way */
 
   /* colors */
-  background-color: #ffe08a;
-  color: #4a4a4a;
+  background-color: #673C4F;
+  color: #83B5D1;
 
   /* shapes */
   border-radius: 6px;
@@ -117,7 +118,7 @@ form {
 */
 
 .box {
-  background-color: rgba(239, 239, 239, 0.40);
+  background-color: #726E97;
   border: 2px dashed;
   border-radius: 4px;
 
@@ -128,14 +129,14 @@ form {
 }
 
 .left_section {
-  background-color: rgba(0, 139, 139, 0.8);
+  background-color: #7F557D;
   flex: 0 1 auto;
   margin: 1rem;
   padding: 1.5rem;
 }
 
 .right_section{
-  background-color: rgba(255, 224, 138, 0.7);
+  background-color: #7F557D;
   flex: 1 2 auto;
   margin: 1rem;
   align-items: center;
@@ -154,7 +155,7 @@ form {
 .footer {
   flex-shrink: 0;
   padding: 1rem;
-  background-color: rgba(0, 139, 139, 0.8);
+  background-color: #673C4F;
   font-size: 1.2rem;
   font-weight: 600;
 }
